# miru-alpha

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  config.json  ffigen.yaml  ffmpeg_ffigen.yaml  flutter_launcher_icons.yaml  miru  pubspec.yaml
.github/workflows/: prbuild.yml  release_alpha.yml
android/: .gitignore  CMakeLists.txt  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/miru_alpha/: MainActivity.kt
android/app/src/main/kotlin/com/example/miru_new/: MainActivity.kt
assets/: iso.json
assets/i18n/: en.json  zh.json
assets/js/: jsCoreRuntime.js  quickJsRuntime.js
hook/: build.dart  link.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: generated_bindings.dart  main.dart  objectbox-model.json  objectbox.g.dart
lib/controllers/: application_controller.dart  extension_page_controller.dart  main_controller.dart
lib/miru_core/: core.dart  event_service.dart  grpc_client.dart  network.dart
lib/miru_core/extension/: extension_service.dart
lib/miru_core/network/: network.dart
lib/miru_core/proto/: app_setting.pbjson.dart  common.pb.dart  common.pbenum.dart  db.pbgrpc.dart  download.pb.dart  download.pbgrpc.dart  download.pbjson.dart  events.pbenum.dart  events.pbgrpc.dart  extension.pb.dart  extension.pbenum.dart  extension.pbgrpc.dart  miru_core_service.pb.dart  miru_core_service.pbgrpc.dart  miru_core_service.pbjson.dart  network.pbgrpc.dart  proto.dart  repo.pbgrpc.dart  repo.pbjson.dart
lib/model/: anilist_model.dart  anilist_model.g.dart  app_setting.dart  extension_meta_data.dart  extension_meta_data.g.dart  extension_setting.dart  index.dart  miru_core.dart  model.dart  model.g.dart  setting_items.dart  tmdb.dart  tmdb.g.dart  tmdb_model.dart  tmdb_model.g.dart  user_data.dart  user_data.g.dart  watch_result.dart
lib/pages/: anilist_webview.dart  download_page.dart  index.dart  main_page.dart  manga_reader.dart  mobile_webview.dart  search_page.dart  search_page_single_view.dart  video_player.dart
lib/pages/detail/: desktop_loaded_page.dart  detail_load_page.dart  detail_loading_page.dart  detail_page.dart  mobile_loaded_page.dart
lib/pages/dev_tool/: dev_tool_page.dart
lib/pages/download/: download_page.dart  mobile_download_page.dart
lib/pages/extension/: extension_page.dart
lib/pages/extension_settings/: extension_settings.dart
lib/pages/favorite/: favorite_page_desktop_layout.dart  favorite_page_layout.dart  favorite_tab.dart
lib/pages/history/: history_page.dart
lib/pages/home/: favorite_page_desktop_layout.dart  favorite_tab.dart  history_page.dart  home_page.dart  index.dart  library_page.dart
lib/pages/license/: license_page.dart
lib/pages/search/: desktop_search_page.dart  global_search.dart  mobile_search_page.dart  search_new.dart  search_page.dart  search_page_single_view.dart
lib/pages/setting/: desktop_proxy_dialog.dart  mobile_proxy_page.dart  setting_core.dart  setting_extension.dart  setting_general.dart  setting_items.dart  setting_network.dart  settings_page.dart
lib/pages/source_code/: source_code_page.dart
lib/pages/tracking/: anilist_progress_page.dart  anilist_search_page.dart  tracking_page.dart
lib/pages/video_player/: video_player.dart
lib/pages/watch/: load_entry.dart  manga_reader.dart  novel_reader.dart  player_button.dart  video_player.dart
lib/pages/webview/: desktop_webview.dart  mobile_webview.dart
lib/provider/: anilist_change_notifier.dart  anilist_provider.dart  anilist_provider.g.dart  application_controller_provider.dart  application_controller_provider.g.dart  detail_page_provider.dart  detail_page_provider.g.dart  detial_provider.dart  detial_provider.g.dart  dev_tool_provider.dart  dev_tool_provider.g.dart  download_provider.dart  download_provider.g.dart  extension_page_notifier_provider.dart  extension_page_notifier_provider.g.dart  extension_page_provider.dart  extension_provider.dart  extension_provider.g.dart  favorite_page_provider.dart  favorite_page_provider.g.dart  history_page_provider.dart  history_page_provider.g.dart  main_controller_provider.dart  main_controller_provider.g.dart  network_provider.dart  network_provider.g.dart  search_page_provider.dart  search_page_provider.g.dart  search_page_single_provider.dart  search_page_single_provider.g.dart  setting_page_provider.dart  settingpage_provider.dart  tmdb_provider.g.dart  video_provider.dart  video_provider.g.dart
lib/provider/core/: toggle_provider.dart  toggle_provider.g.dart
lib/provider/home/: favorite_page_provider.dart  favorite_page_provider.g.dart  history_page_provider.dart  history_page_provider.g.dart
lib/src/: c_library.dart
lib/theme/: select_group_style.dart  text_field_style.dart
lib/utils/: btserver.dart  database_service.dart  device_util.dart  i18n.dart  index.dart  log.dart  miru_directory.dart  miru_settings.dart  miru_storage.dart  setting_dir_index.dart  storage_index.dart  subtitle.dart
lib/utils/core/: i18n.dart  (+5 more)
lib/widgets/: error.dart  extension_tile.dart  image_widget.dart  index.dart  miru_list_view.dart  miru_scaffold.dart  miru_single_child_view.dart  platform_widget.dart  scale_widget.dart  snackbar.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
src/ffmpeg_merge/: CMakeLists.txt
src/ffmpeg_merge/android/: CMakeLists.txt
src/ffmpeg_merge/cpp/: main.cpp  main.h  main.hpp
src/ffmpeg_merge/linux/: CMakeLists.txt
src/ffmpeg_merge/linux_x64/: CMakeLists.txt
src/ffmpeg_merge/windows_x64/: CMakeLists.txt
src/miru_core/: CMakeLists.txt  libmiru_core.h
src/miru_core/linux/: CMakeLists.txt
src/miru_core/windows/: CMakeLists.txt
test/: widget_test.dart
tool/ffigen/: ffmpeg_merge.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+315 files in other folders)
